--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <input type="submit" value="Log In" />
     </form>
     <h1 id="greeting" class="hidden"></h1>
+    <h2 id="clock">00:00:00</h2>
     <script src="./js/greeting.js"></script>
     <script src="./js/clock.js"></script>
   </body>
