--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
       />
       <input type="submit" value="Log In" />
     </form>
-    <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00:00</h2>
+    <h1 id="greeting" class="hidden"></h1>
+    <div id="quote">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <script src="./js/greeting.js"></script>
     <script src="./js/clock.js"></script>
+    <script src="./js/quotes.js"></script>
   </body>
 </html>
