--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <script src="./js/greeting.js"></script>
     <script src="./js/clock.js"></script>
     <script src="./js/quotes.js"></script>
+    <script src="./js/background.js"></script>
   </body>
 </html>
