--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form">
-      <input type="text" placeholder="write a to do and Press Enter" />
+      <input type="text" placeholder="Write a To Do and Press Enter" />
     </form>
     <ul id="todo-list"></ul>
     <div id="quote">
